--- a/style/_theme.scss
+++ b/style/_theme.scss
@@ -1,10 +1,12 @@
 $theme-color__1: #011140;
 $theme-color__2: #DFE7F2;
 $theme-color__3: #b0c6d9;
-$theme-color__4: #7693A6;
+$theme-color__4: #7693a6;
 $theme-color__5: #F2F2F2;
 
-$theme-text__font: 'Titillium Web';
+$theme-text__font-serif: 'Noto Serif', 'serif';
+$theme-text__font-sans: 'Titillium Web','sans-serif';
+
 $theme-text__size-1: 26px;
 $theme-text__size-2: 24px;
 $theme-text__size-3: 20px;
