--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
 @use './bootstrap/bootstrap.min.css';
-@use './modifiers.scss';
+@use './_theme.scss';
 @use './portfolio.scss';
+/*# sourceMappingURL=style.css.map */
